# tls1.3_verifier

./: .gitignore  Cargo.toml  README.md
examples/: certificate_verification.rs  client_hello.rs  full_handshake.rs  handshake_verification.rs  tls_verifier_cli.rs  verify_tls13_handshake.rs
src/: alert.rs  crypto.rs  error.rs  handshake.rs  lib.rs  record.rs  session.rs  utils.rs
src/certificate/: mod.rs  validation.rs  x509.rs
src/crypto/: aead.rs  hkdf.rs  key_exchange.rs  mod.rs  signature.rs  transcript.rs
src/handshake/: certificate.rs  certificate_verify.rs  client_hello.rs  encrypted_extensions.rs  finished.rs  mod.rs  server_hello.rs
src/handshake/extensions/: key_share.rs  mod.rs  supported_versions.rs
src/state/: client.rs  mod.rs  server.rs
src/tls/: constants.rs  mod.rs  types.rs
tests/: certificate_tests.rs  integration.rs
