[package]
name = "tls13_verifier"
version = "0.1.0"
edition = "2021"
authors = ["Claude <noreply@anthropic.com>"]
description = "A Rust library for TLS 1.3 handshake verification"
readme = "README.md"
keywords = ["tls", "cryptography", "security", "verification"]
categories = ["cryptography", "network-programming"]

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
ring = "0.17"
rustls-pemfile = "1.0"
x509-parser = "0.15"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
bytes = "1.4"

[dev-dependencies]
pretty_assertions = "1.4"
hex = "0.4"
